Testing JSON file added.

--- a/FrontEnd/HTML/index.html
+++ b/FrontEnd/HTML/index.html
@@ -30,19 +30,7 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action1</a>
-              <a class="dropdown-item" href="#">Action2</a>
-              <a class="dropdown-item" href="#">Action3</a>
-            </div>
-          </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     </nav>
 
@@ -50,7 +38,7 @@
 
       <div class="simple-container">
         <h1>Intelligent Systems Group 7</h1>
-        
+        <br/>
         <h4>Charles</h4>
         101312298@student.swin.edu.au   <br/>
 
@@ -61,7 +49,7 @@
         p.hct23@gmail.com               <br/>
 
         <h4>Blake</h4>
-        blakelinnell96@gmail.com        <br/>
+        100586937@student.swin.edu.au   <br/>
       </div>
 
     </div><!-- /.container -->
