Changes to the webGUI

--- a/FrontEnd/HTML/agents.html
+++ b/FrontEnd/HTML/agents.html
@@ -21,9 +21,7 @@
 
     <!-- Javascript Functions -->
     <script src="../JS/functions.js"></script>
-    <script src="../JS/agent-1.js"></script>
-    <script src="../JS/agent-2.js"></script>
-    <script src="../JS/agent-3.js"></script>
+    <script src="../JS/agents.js"></script>
 
     <title>Intelligent Systems Project 3</title>
   </head>
@@ -54,12 +52,7 @@
       <div class="row">
         <div class="col">
           <svg width="960" height="600"></svg>
-          <script>drawAgent1();</script>
-          <script>drawAgent1();</script>
-          <script>drawAgent1();</script>
-          <script>drawAgent2();</script>
-          <script>drawAgent2();</script>
-          <script>drawAgent3();</script>
+          <script>drawAgents();</script>
         </div><!-- /.col -->
 
         <div class="col">
