fixed agent displayh to show messages

--- a/FrontEnd/HTML/agents.html
+++ b/FrontEnd/HTML/agents.html
@@ -57,7 +57,7 @@
 
         <div class="col">
           <div class="box">
-            <div id="agent-data"><script>LoadResellerAgents();</script></div>
+            <div id="agent-data"></div>
           </div>
         </div><!-- /.col -->
       </div><!-- /.row -->
