Added websocket code

--- a/frontend/HTML/agents.html
+++ b/frontend/HTML/agents.html
@@ -53,6 +53,7 @@
         <div class="col">
           <svg width="960" height="600"></svg>
           <script>drawAgents();</script>
+          <script>console.log("DEBUG agents.html")</script>>
         </div><!-- /.col -->
 
         <div class="col">
