Got front end displauying basic logging
:D

Need to fix the way it displays.

--- a/frontend/HTML/agents.html
+++ b/frontend/HTML/agents.html
@@ -43,6 +43,9 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Reference</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="logging.html">Logs</a>
+          </li>
         </ul>
       </div>
       <button id="ref" type="button" class="btn btn-danger" onClick="window.location.reload()"><i class="fa fa-refresh" aria-hidden="true"></i> Refresh</button>
