--- a/backend/control-server/src/main/resources/public/index.html
+++ b/backend/control-server/src/main/resources/public/index.html
@@ -16,11 +16,12 @@
         //Establish the WebSocket connection and set up event handlers
         var webSocket = new WebSocket("ws://localhost:4567/ws");
 
-        webSocket.onMessage = function (msg) {
+        webSocket.onmessage = function (msg) {
+            console.log(JSON.parse(msg.data));
             updateChat(msg);
         };
 
-        webSocket.onClose = function () {
+        webSocket.onclose = function () {
             alert("WebSocket connection closed")
         };
 
