Some basic front end stuff done
Making sure everything is up to date for Huan to fix his DODGY CODE!!!!!
Naaa just kidding man probably something I am doing wrong

--- a/frontend/HTML/index.html
+++ b/frontend/HTML/index.html
@@ -34,7 +34,10 @@
             <a class="nav-link disabled" href="#Reference">Reference</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="logging.html">Logs</a>
+            <a class="nav-link" href="logging.html">Logs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="stats.html">Stats</a>
           </li>
         </ul>
       </div>
