--- a/frontend/HTML/logging.html
+++ b/frontend/HTML/logging.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../brower-components/bootstrap/css/bootstrap-3_3_7.min.css">
 
     <!-- Javascript Functions -->
-    <script src="../JS/functions.js"></script>
+    <script src="../JS/logging.js"></script>
 
     <title>Intelligent Systems Project 3</title>
   </head>
@@ -37,33 +37,69 @@
             <a class="nav-link disabled" href="#">Reference</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link disabled" href="logging.html">Logs  <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="logging.html">Logs  <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="stats.html">Stats</a>
           </li>
         </ul>
       </div>
     </nav>
 
+    <style type="text/css">
+        th, td {
+          padding: 10px;
+        }
+        table tr:nth-child(even) {
+         background-color: #eee;
+        }
+        table tr:nth-child(odd) {
+          background-color: #fff;
+        }
+        table th {
+          color: black;
+          background-color: white;
+        }
+    </style>
+
     <ul class="list-group">
       <li class="list-group-item">
           <span class="badge" id="number-verbose-messages">0</span>
-          <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#verbose-message-list">Verbose</button>
-          <ul id="verbose-message-list" class="collapse">
-            <li>Test</li>
-            <li> this</li>  
-          </ul>
+          <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#verbose-message-table">Verbose</button>
+          <table id="verbose-message-table" class="collapse">
+          <tr>
+            <th>Logged By</th>
+            <th>Logged At Time</th>
+            <th>Time Left</th>
+            <th>Message</th>
+          </tr>
+          </table>
       </li>
       <li class="list-group-item">
         <span class="badge" id="number-error-messages">0</span>
-        <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#error-message-list">Error</button>
-        <ul id="error-message-list"></ul>
+        <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#error-message-table">Error</button>
+        <table id="error-message-table" class="collapse">
+          <tr>
+            <th>Logged By</th>
+            <th>Logged At Time</th>
+            <th>Time Left</th>
+            <th>Message</th>
+          </tr>
+          </table>
       </li> 
       <li class="list-group-item">
         <span class="badge" id="number-debug-messages">0</span>
-        <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#debug-message-list">Debug</button>
-        <ul id="debug-message-list"></ul> 
+        <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#debug-message-table">Debug</button>
+        <table id="debug-message-table" class="collapse">
+          <tr>
+            <th>Logged By</th>
+            <th>Logged At Time</th>
+            <th>Time Left</th>
+            <th>Message</th>
+          </tr>
+          </table>
       </li> 
     </ul>
-  
 
     <!-- Jquery javascript AJAX -->
     <script src="../brower-components/jquery/jquery-3.2.1.min.js"></script>
