--- a/backend/control-server/src/main/resources/public/index.html
+++ b/backend/control-server/src/main/resources/public/index.html
@@ -24,7 +24,7 @@
             return [...new Set(this)];
         };
 
-        /** Diffs two arrays, finding out which elements are new in the second array */
+        /** Diffs two arrays, finding out which elements have been removed in the second array*/
         Array.prototype.removed = function (newArray) {
             return this.filter((firstElement) => {
                 return !newArray.some(secondElement => {
@@ -33,7 +33,7 @@
             });
         };
 
-        /** Diffs two arrays, finding out which elements have been removed in the second array */
+        /** Diffs two arrays, finding out which elements have been added in the second array*/
         Array.prototype.added = function (newArray) {
             return newArray.filter((firstElement) => {
                 return !this.some((secondElement) => {
@@ -42,201 +42,217 @@
             });
         };
 
-        // (() => {
-        //     let nestedArray = [1,2,[3,[4,5],6],7];
-        //     let flattenedArray = [1,2,3,[4,5],6,7];
-        //     console.log("flatMap test");
-        //     console.log("test data: ");
-        //     console.log(nestedArray);
-        //     console.log("actual: ");
-        //     console.log(nestedArray.flatMap(x => {return x}));
-        //     console.log("expected: ");
-        //     console.log(flattenedArray);
+        (() => {
+            let nestedArray = [1, 2, [3, [4, 5], 6], 7];
+            let flattenedArray = [1, 2, 3, [4, 5], 6, 7];
+            console.log("flatMap test");
+            console.log("test data: ");
+            console.log(nestedArray);
+            console.log("actual: ");
+            console.log(nestedArray.flatMap(x => { return x }));
+            console.log("expected: ");
+            console.log(flattenedArray);
 
 
 
-        //     let array1 = [1,2,3,4,5,6,7];
-        //     let array2 = [2,4,5,8,9,10];
+            let array1 = [1, 2, 3, 4, 5, 6, 7];
+            let array2 = [2, 4, 5, 8, 9, 10];
 
-        //     let array1Added = array1.added(array2);
-        //     let array1Removed = array1.removed(array2);
+            let array1Added = array1.added(array2);
+            let array1Removed = array1.removed(array2);
 
-        //     console.log("added test")
-        //     console.log("actual: " + array1Added.toString()); 
-        //     console.log("expected: " + "8,9,10");
+            console.log("added test")
+            console.log("actual: " + array1Added.toString());
+            console.log("expected: " + "8,9,10");
 
-        //     console.log("removed test")
-        //     console.log("actual: " + array1Removed.toString()); 
-        //     console.log("expected: " + "1,3,6,7");
-        // })();
+            console.log("removed test")
+            console.log("actual: " + array1Removed.toString());
+            console.log("expected: " + "1,3,6,7");
+        })();
 
-        // let myGraph = () => {
-        //     // Add and remove elements on the graph object
+        let myGraph = () => {
+            // Add and remove elements on the graph object
 
-        //     this.addNode = function (id) {
-        //         nodes.push({ "id": id });
-        //         update();
-        //     };
+            this.addNode = function (id) {
+                nodes.push({ "id": id });
+                update();
+            };
 
-        //     this.diffNodes = function (newNodes) {
-        //         return newNodes.diff(nodes)
-        //     }
+            this.addNewNodes = (newNodes) => {
+                nodes.added(newNodes).forEach(element => {
+                    addNode(element);
+                });
+            };
 
-        //     this.removeNode = function (id) {
-        //         var i = 0;
-        //         var n = findNode(id);
-        //         while (i < links.length) {
-        //             if ((links[i]['source'] == n) || (links[i]['target'] == n)) {
-        //                 links.splice(i, 1);
-        //             }
-        //             else i++;
-        //         }
-        //         nodes.splice(findNodeIndex(id), 1);
-        //         update();
-        //     };
+            this.removeNode = function (id) {
+                var i = 0;
+                var n = findNode(id);
+                while (i < links.length) {
+                    if ((links[i]['source'] == n) || (links[i]['target'] == n)) {
+                        links.splice(i, 1);
+                    }
+                    else i++;
+                }
+                nodes.splice(findNodeIndex(id), 1);
+                update();
+            };
 
-        //     this.removeLink = function (source, target) {
-        //         for (var i = 0; i < links.length; i++) {
-        //             if (links[i].source.id == source && links[i].target.id == target) {
-        //                 links.splice(i, 1);
-        //                 break;
-        //             }
-        //         }
-        //         update();
-        //     };
+            this.addLink = function (source, target, value) {
+                links.push({ "source": findNode(source), "target": findNode(target), "value": value });
+                update();
+            };
 
-        //     this.removeallLinks = function () {
-        //         links.splice(0, links.length);
-        //         update();
-        //     };
+            /** 
+            * I'm so sorry for this
+            */
+            this.replaceLinks = function (linksArray) {
+                links.splice(0, links.length);
+                // Only includes links where the node id already exists, to avoid undefined errors
+                linksArray.filter(linkElement => {
 
-        //     this.removeAllNodes = function () {
-        //         nodes.splice(0, links.length);
-        //         update();
-        //     };
+                    return (nodes.some(nodeElement => {
+                        nodeElement.id === linkElement.source
+                    })
 
-        //     this.addLink = function (source, target, value) {
-        //         links.push({ "source": findNode(source), "target": findNode(target), "value": value });
-        //         update();
-        //     };
+                    &&
 
-        //     var findNode = function (id) {
-        //         for (var i in nodes) {
-        //             if (nodes[i]["id"] === id) return nodes[i];
-        //         }
-        //         ;
-        //     };
+                    (nodes.some(nodeElement => {
+                        nodeElement.id === linkElement.target
+                    })));
 
-        //     var findNodeIndex = function (id) {
-        //         for (var i = 0; i < nodes.length; i++) {
-        //             if (nodes[i].id == id) {
-        //                 return i;
-        //             }
-        //         }
-        //         ;
-        //     };
+                }).forEach(element => {
+                    addLink(element.source, element.target, element.value);
+                });
+            }
 
-        //     // set up the D3 visualisation in the specified element
-        //     var w = 960,
-        //         h = 450;
+            this.removeLink = function (source, target) {
+                for (var i = 0; i < links.length; i++) {
+                    if (links[i].source.id == source && links[i].target.id == target) {
+                        links.splice(i, 1);
+                        break;
+                    }
+                }
+                update();
+            };
 
-        //     var color = d3.scale.category10();
+            this.removeallLinks = function () {
+                links.splice(0, links.length);
+                update();
+            };
 
-        //     var vis = d3.select("body")
-        //         .append("svg:svg")
-        //         .attr("width", w)
-        //         .attr("height", h)
-        //         .attr("id", "svg")
-        //         .attr("pointer-events", "all")
-        //         .attr("viewBox", "0 0 " + w + " " + h)
-        //         .attr("perserveAspectRatio", "xMinYMid")
-        //         .append('svg:g');
+            this.removeAllNodes = function () {
+                nodes.splice(0, links.length);
+                update();
+            };
 
-        //     var force = d3.layout.force();
+            var findNode = function (id) {
+                return nodes.find(element => { element["id"] === id });
+            };
 
-        //     var nodes = force.nodes(),
-        //         links = force.links();
+            var findNodeIndex = function (id) {
+                return nodes.findIndex(element => { element["id"] === id });
+            };
+            // set up the D3 visualisation in the specified element
+            var w = 960,
+                h = 450;
 
-        //     var update = function () {
-        //         var link = vis.selectAll("line")
-        //             .data(links, function (d) {
-        //                 return d.source.id + "-" + d.target.id;
-        //             });
+            var color = d3.scale.category10();
 
-        //         link.enter().append("line")
-        //             .attr("id", function (d) {
-        //                 return d.source.id + "-" + d.target.id;
-        //             })
-        //             .attr("stroke-width", function (d) {
-        //                 return d.value / 10;
-        //             })
-        //             .attr("class", "link");
-        //         link.append("title")
-        //             .text(function (d) {
-        //                 return d.value;
-        //             });
-        //         link.exit().remove();
+            var vis = d3.select("body")
+                .append("svg:svg")
+                .attr("width", w)
+                .attr("height", h)
+                .attr("id", "svg")
+                .attr("pointer-events", "all")
+                .attr("viewBox", "0 0 " + w + " " + h)
+                .attr("perserveAspectRatio", "xMinYMid")
+                .append('svg:g');
 
-        //         var node = vis.selectAll("g.node")
-        //             .data(nodes, function (d) {
-        //                 return d.id;
-        //             });
+            var force = d3.layout.force();
 
-        //         var nodeEnter = node.enter().append("g")
-        //             .attr("class", "node")
-        //             .call(force.drag);
+            var nodes = force.nodes(),
+                links = force.links();
 
-        //         nodeEnter.append("svg:circle")
-        //             .attr("r", 12)
-        //             .attr("id", function (d) {
-        //                 return "Node;" + d.id;
-        //             })
-        //             .attr("class", "nodeStrokeClass")
-        //             .attr("fill", function (d) { return color(d.id); });
+            var update = function () {
+                var link = vis.selectAll("line")
+                    .data(links, function (d) {
+                        return d.source.id + "-" + d.target.id;
+                    });
 
-        //         nodeEnter.append("svg:text")
-        //             .attr("class", "textClass")
-        //             .attr("x", 14)
-        //             .attr("y", ".31em")
-        //             .text(function (d) {
-        //                 return d.id;
-        //             });
+                link.enter().append("line")
+                    .attr("id", function (d) {
+                        return d.source.id + "-" + d.target.id;
+                    })
+                    .attr("stroke-width", function (d) {
+                        return d.value / 10;
+                    })
+                    .attr("class", "link");
+                link.append("title")
+                    .text(function (d) {
+                        return d.value;
+                    });
+                link.exit().remove();
 
-        //         node.exit().remove();
+                var node = vis.selectAll("g.node")
+                    .data(nodes, function (d) {
+                        return d.id;
+                    });
 
-        //         force.on("tick", function () {
+                var nodeEnter = node.enter().append("g")
+                    .attr("class", "node")
+                    .call(force.drag);
 
-        //             node.attr("transform", function (d) {
-        //                 return "translate(" + d.x + "," + d.y + ")";
-        //             });
+                nodeEnter.append("svg:circle")
+                    .attr("r", 12)
+                    .attr("id", function (d) {
+                        return "Node;" + d.id;
+                    })
+                    .attr("class", "nodeStrokeClass")
+                    .attr("fill", function (d) { return color(d.id); });
 
-        //             link.attr("x1", function (d) {
-        //                 return d.source.x;
-        //             })
-        //                 .attr("y1", function (d) {
-        //                     return d.source.y;
-        //                 })
-        //                 .attr("x2", function (d) {
-        //                     return d.target.x;
-        //                 })
-        //                 .attr("y2", function (d) {
-        //                     return d.target.y;
-        //                 });
-        //         });
+                nodeEnter.append("svg:text")
+                    .attr("class", "textClass")
+                    .attr("x", 14)
+                    .attr("y", ".31em")
+                    .text(function (d) {
+                        return d.id;
+                    });
 
-        //         // Restart the force layout.
-        //         force
-        //             .gravity(.01)
-        //             .charge(-80000)
-        //             .friction(0)
-        //             .linkDistance(function (d) { return d.value * 10 })
-        //             .size([w, h])
-        //             .start();
-        //     };
+                node.exit().remove();
 
-        //     // Make it all go
-        //     update();
-        // }
+                force.on("tick", function () {
+
+                    node.attr("transform", function (d) {
+                        return "translate(" + d.x + "," + d.y + ")";
+                    });
+
+                    link.attr("x1", function (d) {
+                        return d.source.x;
+                    })
+                        .attr("y1", function (d) {
+                            return d.source.y;
+                        })
+                        .attr("x2", function (d) {
+                            return d.target.x;
+                        })
+                        .attr("y2", function (d) {
+                            return d.target.y;
+                        });
+                });
+
+                // Restart the force layout.
+                force
+                    .gravity(.01)
+                    .charge(-80000)
+                    .friction(0)
+                    .linkDistance(function (d) { return d.value * 10 })
+                    .size([w, h])
+                    .start();
+            };
+
+            // Make it all go
+            update();
+        }
 
         (() => {
 
