More work on the front end
Done for the day`

--- a/frontend/HTML/stats.html
+++ b/frontend/HTML/stats.html
@@ -46,9 +46,15 @@
       </div>
     </nav>
     <div>
-       <div id="average-price-chart" style="width: 900px; height: 500px"></div>
-       <div id="average-volume-chart" style="width: 900px; height: 500px"></div>
-       <div id="average-time-chart" style="width: 900px; height: 500px"></div>
+      <table>
+        <tr>
+          <th><div id="average-price-chart" style="display: block;"></div></th>
+          <th> <div id="average-volume-chart" style="display: block;"></div></th>
+        </tr>
+        <tr>
+          <th><div id="average-time-chart" style="display: block;"></div></th>
+        </tr>
+      </table>
     </div>
 
   
