Made some changes to class structre
Put some of base into a new class NegotiatingAgent and then added a few
functions for use when dealing with contracts.

--- a/frontend/HTML/stats.html
+++ b/frontend/HTML/stats.html
@@ -48,11 +48,11 @@
     <div>
       <table>
         <tr>
-          <th><div id="average-price-chart" style="display: block;"></div></th>
-          <th> <div id="average-volume-chart" style="display: block;"></div></th>
+          <th><div id="average-price-chart"></div></th>
+          <th> <div id="average-volume-chart"></div></th>
         </tr>
         <tr>
-          <th><div id="average-time-chart" style="display: block;"></div></th>
+          <th><div id="average-time-chart"></div></th>
         </tr>
       </table>
     </div>
