Fixed some layout issues in front end
We know have 4 graphs and logging messages on the front end working end
to end :D

--- a/frontend/HTML/stats.html
+++ b/frontend/HTML/stats.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="" ="index.html">Navbar</a>
+      <a class="navbar-brand" href="" ="index.html">IS-7</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar" aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,7 +45,12 @@
         </ul>
       </div>
     </nav>
-    <div>
+    <style type="text/css">
+      th {
+        padding: 10px;
+      }
+    </style>
+    <div style="width: 82%; margin: auto;">
       <table>
         <tr>
           <th><div id="average-price-chart"></div></th>
@@ -53,11 +58,11 @@
         </tr>
         <tr>
           <th><div id="average-time-chart"></div></th>
+          <th><div id="sales-made-chart"></div></th>
         </tr>
       </table>
     </div>
 
-  
     <!-- Jquery javascript AJAX -->
     <script src="../brower-components/jquery/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap javascript at the end so page loads faster -->
@@ -68,4 +73,4 @@
 
 
   </body>
-</html>
+</html> 
