Some basic work done on the front end
My god JS is the biggest pile of FNOIF#PR@#E!D!@D!@DXXADCS!!!

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -196,5 +196,6 @@
       <!-- Javascript Functions -->
     <script src="../JS/stats.js"></script>
     <script src="../JS/logging.js"></script>
+        <script src="../JS/agent-data.js"></script>
   </body>
 </html>
