fix: serialize the json before sending it

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -189,6 +189,7 @@
 
     <!-- d3 Graphs for siq interactive agent data -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="../JS/lib/agent-api.js"></script>
     <script src="../JS/polyfills.js"></script>
     <script src="../JS/agent-graph.js"></script>
     <script src="../JS/ws-handler.js"></script>
