changed node width dynamically

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,14 +14,14 @@
   <link rel="stylesheet" href="../bower-components/bootstrap/css/bootstrap-3_3_7.min.css">
 
   <style>
-    .link {
-      stroke: #2E2E2E;
-      stroke-width: 2px;
-    }
-
     .node {
       stroke: #fff;
       stroke-width: 2px;
+    }
+
+    .link {
+      stroke: #999999;
+      /*stroke-width: 20px;*/
     }
 
     .textClass {
